<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/baseline_list_black_18dp"
            android:title="@string/orders"/>
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/round_shopping_cart_black_18dp"
            android:title="@string/cart" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/round_grade_black_18dp"
                android:title="@string/rate" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/round_people_black_18dp"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_contact"
                android:title="@string/contact"
                android:icon="@drawable/baseline_call_black_18dp"/>
            <item
                android:id="@+id/nav_help"
                android:title="@string/help"
                android:icon="@drawable/baseline_help_black_18dp"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/round_insert_comment_black_18dp"
                android:title="@string/feedback" />
        </menu>
    </item>
</menu>
